Registro y Login completos -> falta revisar REGEXP de Password

--- a/fronted/login.html
+++ b/fronted/login.html
@@ -67,7 +67,7 @@
 <script>
     let iconoMenu = document.getElementById('menu-hamburguesa');
     let menuDesplegable = document.getElementById('enlaces-menu-desplegable');
-    let mainContainer = document.getElementById('mainContainer');
+    let mainContainer = document.getElementById('main-container');
     iconoMenu.addEventListener('click', (event) => {
         menuDesplegable.classList.toggle('hidden');
     })
