--- a/fronted/esqueleto.html
+++ b/fronted/esqueleto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/landing.css">
     <script src="https://kit.fontawesome.com/a5191f3c7b.js" crossorigin="anonymous"></script>
+    <script src="./js/jwt.js"></script>
 </head>
 <body>
     <header id="headerbar">
