--- a/fronted/registro.html
+++ b/fronted/registro.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/registrologin.css">
     <script src="https://kit.fontawesome.com/a5191f3c7b.js" crossorigin="anonymous"></script>
+    <script src="./js/jwt.js"></script>
 </head>
 <body>
     <header id="headerbar">
@@ -53,6 +54,7 @@
                 <input class="item-registro item-form" type="email" id="email" name="email" placeholder="Correo Electrónico">
                 <input class="item-registro item-form" type="password" id="password" name="password" placeholder="Contraseña"> 
                 <input class="item-registro item-form" type="password" id="password2" name="password2" placeholder="Repetir Contraseña">
+                <label class="item-registro item-form" for="isAdmin" style="border: none;"><input type="checkbox" name="isAdmin" id="isAdmin" placeholder="Marca para registrar cuenta de organizador" >&nbsp;Soy una entidad organizadora de eventos deportivos</label>
             </form>
             <div id="iniciar-sesion" class="item-registro">Registrar Usuario</div>
             <a href="./login.html" id="enlace-login" class="item-registro">¿Ya tienes una cuenta?<br>Inicia Sesión aquí</a>
