--- a/fronted/completarUsuario.html
+++ b/fronted/completarUsuario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing</title>
+    <title>Esqueleto</title>
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/landing.css">
     <script src="https://kit.fontawesome.com/a5191f3c7b.js" crossorigin="anonymous"></script>
@@ -47,8 +47,24 @@
         <div id="breadcrumbs"></div>
     </nav>
     <main id="mainContainer">
-        <a id="eslogan" href="./main.html"><h1>El mejor catálogo de carreras</h1></a>
-        <!--<a href="./main.html" id="letsgo">Let's Go!!</a>-->
+        <form action="">
+            <!--Formulario para recoger los datos que faltan para finalizar el registro de usuario-->
+            <div>Rellena los datos para completar el registro</div>
+            <label for="nombre">Nombre</label>
+            <input type="text" name="nombre" id="nombre" placeholder="Nombre">
+            <label for="apellidos">Nickname</label>
+            <input type="text" name="nickname" id="nickname" placeholder="Apellidos">
+            <label for="fechaNacimiento">Fecha de Nacimiento</label>
+            <input type="date" name="fechaNacimiento" id="fechaNacimiento" placeholder="Fecha de Nacimiento">
+        </form>
+        <form action="../backend/api_racebook/signup/organizador/imagen.php" enctype="multipart/form-data" method="post">
+            <!--Formulario para recoger la imagen de usuario; se manda directo a la API-->
+            <div>Sube una imagen de perfil</div>
+            <input type="file" name="imagen" id="imagen">
+            <input type="number" name="idUsuario" id="idUsuario" style="display: none;">
+            <input type="submit" value="Cargar Imagen" name="imagen" id="cargarImagen">
+        </form>
+        <div id="finalizarRegistro">Finalizar Registro</div>
     </main>
     <!--El footer no se muestra en dispositivos moviles-->
     <footer>
@@ -68,5 +84,38 @@
             menuDesplegable.classList.toggle('hidden');
         }
     })
+    //Se recoge el idUsuario del JWT y se guarda en el dataset del elemento #idUsuario
+    let idUsuario = document.getElementById('idUsuario');
+    let jwt = getLocalJWT();
+    let decodedJWT = decodeJWT(jwt);
+    idUsuario.dataset.idUsuario = decodedJWT.idUsuario;
+    //al pulsar en finalizarRegistro se envian los datos a la API
+    let finalizarRegistro = document.getElementById('finalizarRegistro');
+    finalizarRegistro.addEventListener('click', handleSignUp);
+    async function handleSignUp(){
+        let data = {
+            nombre: document.getElementById('nombre').value,
+            nickname: document.getElementById('nickname').value,
+            fechaNacimiento: document.getElementById('fechaNacimiento').value,
+            idUsuario: document.getElementById('idUsuario').dataset.idUsuario,
+        }
+        let url = '../backend/api_racebook/signup/usuario/';
+        fetch(url,{
+            method: 'POST',
+            body: JSON.stringify(datos),
+            headers:{
+                'Content-Type': 'application/json;utf-8'
+            },
+            body: JSON.stringify(data),
+            mode: 'cors'
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log(data);
+            if(data.status == 200){
+                window.location.href = './login.html';
+            }
+        })
+    }
 </script>
 </html>
