--- a/fronted/esqueletov3.html
+++ b/fronted/esqueletov3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing</title>
+    <title>Esqueleto</title>
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/landing.css">
     <script src="https://kit.fontawesome.com/a5191f3c7b.js" crossorigin="anonymous"></script>
@@ -20,9 +20,10 @@
         <div id="headerbarlinks">
             <a class="enlace-header" href="./main.html">Catálogo de Carreras</a>
             <!--Cuando el usuario se ha logeado el contenido de este elemento cambia; será un acceso a la cuenta del usuario-->
-            <a class="enlace-header" id="enlace-cuenta" href="./login.html" id="loginbuttonheader">
+            <a class="enlace-header" id="enlace-cuenta" href="./login.html" id="cuentaButton">
                 <i class="fa-regular fa-user">
-                    <span  class="header-span">Login</span>
+                    <span  class="header-span" id="cuentaButtonText"
+                    >Login</span>
                 </i>
             </a>
         </div>
@@ -47,8 +48,7 @@
         <div id="breadcrumbs"></div>
     </nav>
     <main id="mainContainer">
-        <a id="eslogan" href="./main.html"><h1>El mejor catálogo de carreras</h1></a>
-        <!--<a href="./main.html" id="letsgo">Let's Go!!</a>-->
+        
     </main>
     <!--El footer no se muestra en dispositivos moviles-->
     <footer>
