--- a/fronted/pruebas.html
+++ b/fronted/pruebas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./js/jwt.js"></script>
+    <script src="./js/main.js"></script>
 </head>
 <body>
     
