--- a/fronted/registroEleccion.html
+++ b/fronted/registroEleccion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing</title>
+    <title>Esqueleto</title>
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/landing.css">
     <script src="https://kit.fontawesome.com/a5191f3c7b.js" crossorigin="anonymous"></script>
@@ -47,8 +47,9 @@
         <div id="breadcrumbs"></div>
     </nav>
     <main id="mainContainer">
-        <a id="eslogan" href="./main.html"><h1>El mejor catálogo de carreras</h1></a>
-        <!--<a href="./main.html" id="letsgo">Let's Go!!</a>-->
+        <span>Elige el tipo de Usuario que quieres registrar:</span>
+        <span class="registrarUsuario">Registrar un Usuario normal</span>
+        <span class="registrarOrganizador">Registrarme como Entidad Organizadora de Eventos</span>
     </main>
     <!--El footer no se muestra en dispositivos moviles-->
     <footer>
