--- a/fronted/main.html
+++ b/fronted/main.html
@@ -43,6 +43,7 @@
                     </div>
                 </form>
                 <div id="cambiar-vista">Visualizar en un Mapa</div>
+                <div id="nuevoEvento" class="hidden">Añadir Evento</div>
             </div>
         </div>
         
