--- a/fronted/otraversionLogin.html
+++ b/fronted/otraversionLogin.html
@@ -85,7 +85,7 @@
     <div id="capaOpaca"></div>
   
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid ms-3">
+        <div class="container-fluid ms-3  me-5">
           <a class="navbar-brand" href="./otraversionMain.html">
             <i class="fa-solid fa-person-running"></i>
             <span>RaceBook</span>
