--- a/fronted/otraversionRegistro.html
+++ b/fronted/otraversionRegistro.html
@@ -85,8 +85,8 @@
 <body  data-bs-theme="dark">
     <div id="capaOpaca"></div>
   
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid ms-3">
+    <nav class="navbar navbar-expand-lg  bg-dark">
+        <div class="container-fluid ms-3  me-5">
           <a class="navbar-brand" href="./otraversionMain.html">
             <i class="fa-solid fa-person-running"></i>
             <span>RaceBook</span>
